2007-06-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix for LOGINDISABLED on IMAP
	* Bugfix when connecting (connection status problem)

2007-06-03  Johannes Schmid  <johannes.schmid@openismus.com>

	* libtinymail-camel/tny-camel-account.c:
	tny_camel_account_get_supported_secure_authentication_async_thread
	Fixed implementation to get the secure authentication support
	methods and simplied them a lot.

2007-06-03  Philip Van Hoof  <pvanhoof@gnome.org>

	* Support for removing messages from a POP server after retrieval
	* Support for tny_header_get_uid on TnyMsg's header instance
	* Removed the warning in libtinymail/tny-folder.c: please use the
	support for DBC in stead. It's specifically designed for this. Read
	the documentation in building.txt to find out how to enable it.

	* This was a major API change

2007-06-01  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-folder.c:
	(tny_camel_folder_copy_shared): Initialize some variables 
	to avoid warnings.
	* libtinymail-maemo/tny-maemo-account-store.c:
	(tny_maemo_account_store_add_store_account),
	(tny_maemo_account_store_add_transport_account):
	Remove unused priv variables, to avoid warnings.

2007-05-31  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_connect): Block until the result is received by  	the on_connection_event() signal handler. This always seems to indicate 
	failure on Maemo Bora, but maybe it works properly in later versions.
	It is OK for this to block because the Maemo connection dialog is 
	totally modal anyway, and because most applications will not be able 
	to do anything sensible while waiting, because the user is already 
	waiting for an operation that he has initiated.

	* libtinymail/tny-folder.c: (tny_folder_get_all_count): Warn when this 
	is not implemented. Maybe not very necessary, but I seem to have had 
	this in my local checkout and maybe things crash without the check. 