@@ -59,6 +59,7 @@ struct _TnyStoreAccountIface
 	void (*subscribe_func) (TnyStoreAccount *self, TnyFolder *folder);
 	void (*unsubscribe_func) (TnyStoreAccount *self, TnyFolder *folder);
 	TnyFolder * (*find_folder_func) (TnyStoreAccount *self, const gchar *url_string, GError **err);
+	void (*delete_cache_func) (TnyStoreAccount *self);
 };
 
 GType tny_store_account_get_type (void);
@@ -66,7 +67,7 @@ GType tny_store_account_get_type (void);
 void tny_store_account_subscribe (TnyStoreAccount *self, TnyFolder *folder);
 void tny_store_account_unsubscribe (TnyStoreAccount *self, TnyFolder *folder);
 TnyFolder* tny_store_account_find_folder (TnyStoreAccount *self, const gchar *url_string, GError **err);
-
+void tny_store_account_delete_cache (TnyStoreAccount *self);
 
 G_END_DECLS
 
